# Backend

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json
.github/workflows/: release.yml
.trunk/: trunk.yaml
src/: jshost.rs  lib.rs  main.rs
src/backend/: main.rs  mod.rs
src/backend/games/: create.rs  info.rs  mod.rs  routes.rs  zbus.rs
src/backend/object_storage/: mod.rs  routes.rs
src/backend/object_storage/integrated/: bundles.rs
src/backend/object_storage/s3/: bundles.rs  mod.rs
src/backend/user/: create.rs  info.rs  login.rs  routes.rs  user.rs
src/backend/util/: appstate.rs  id.rs  mod.rs
src/games/: create.rs  info.rs  mod.rs  resources.rs  routes.rs  wsendpoint.rs  zbus.rs
src/js/: ext.js  ext.rs
src/jshost/: main.rs  mod.rs
src/jshost/controller/: interface.rs  mod.rs  run.rs
src/jshost/worker/: log.rs  macros.rs  mod.rs  run.rs
src/jshost/worker/js/: ext.js  ext.rs
src/jshost/worker/ops/: executescript.rs  init.rs  loadgame.rs  mod.rs  startgame.rs
src/object_storage/: mod.rs  provider_base.rs  routes.rs
src/object_storage/integrated/: bundles.rs
src/object_storage/s3/: bundles.rs  def.rs
src/user/: create.rs  info.rs  login.rs  mod.rs  routes.rs  user.rs
src/util/: appstate.rs  id.rs
