[package]
name = "oogaboogagames-backend"
version = "0.1.1"
rust-version = "1.71"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
confy = { version = "0.5.1", features = ["ron_conf"], default-features = false }
rust-s3 = { version = "0.33.0", optional = true }
aws-region = { version = "0.25.3", features = ["serde"], optional = true }
scorched = "0.2.3"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
surrealdb = "1.0.0-beta.9"
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
http-serde = "1.1.3"
regex = "1.10.0"

[features]
default = ["storage-integrated"]
storage-integrated = []
storage-s3 = ["dep:rust-s3", "dep:aws-region"]
